--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.dropdown {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+select {
+  width: 100%;
+  max-width: 90%;
+  padding: 10px;
+  margin-top: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #f5f5f5;
+  font-size: 16px;
+  color: #333;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+
+#button ul {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#button li {
+  flex: 1 1 calc(33.33% - 10px);
+  margin: 5px;
+}
+
+@media (max-width: 768px) {
+  #button li {
+    flex: 1 1 calc(50% - 10px);
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+li{
+  list-style-type: none;
+}
+
+
+.btn{
+	display: block;
+	text-align: center;
+	text-decoration: none;
+	width: 120px;
+	margin: auto;
+	padding: 1rem 4rem;
+	font-weight: bold;
+	border: 2px solid #27acd9;
+	color: #27acd9;
+	transition: 0.5s;
+	color: #fff;
+	background: #27acd9;
+}
+
+.App {
+  text-align: center;
 }
